# sessiometer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
Formula/: sessiometer.rb
apps/menubar/: .gitignore  Info.plist  Sessiometer.entitlements  project.yml
apps/menubar/LaunchAgents/: org.sessiometer.agent.plist
apps/menubar/Sources/: AccountCaptureModel.swift  AccountEventNotifier.swift  AccountSwapModel.swift  BarGlyphRenderer.swift  CaptureAck.swift  ConfigWire.swift  ControlCommandClient.swift  HonestStateMachine.swift  LoginItemModel.swift  PanelStatsModel.swift  RenderBarGlyphTool.swift  RenderPanelTool.swift  SMAppServiceLoginItem.swift  SettingsModel.swift  SettingsView.swift  SettingsWindowController.swift  SocketPathResolver.swift  StatusGauge.swift  StatusItemController.swift  StatusPanelCapture.swift  StatusPanelChrome.swift  StatusPanelEnvironment.swift  StatusPanelFormat.swift  StatusPanelRoster.swift  StatusPanelSharedViews.swift  StatusPanelStats.swift  StatusPanelTint.swift  StatusPanelView.swift  SwapAck.swift  TransportEvent.swift  UserNotificationPresenter.swift  WatchConnection.swift  WatchStateMachine.swift  WatchStatusStore.swift  WatchTransport.swift  WireModel.swift  main.swift
apps/menubar/Tests/: AccountCaptureTests.swift  AccountEventNotifierTests.swift  AccountSwapTests.swift  BarGlyphParityTests.swift  BundledAgentPlistTests.swift  ConfigWireTests.swift  ControlCommandTransportTests.swift  Fixtures.swift  (+13 more)
brand/: README.md  generate.sh
brand/src/: social-preview.html
docs/adr/: 0001-current-thread-tokio-runtime.md  0002-keychain-via-security-cli-zero-ffi.md  0003-no-torn-swap-invariant.md  0004-incidental-libc-ffi-kept-raw.md  0005-config-parsed-by-crate-emitted-by-hand.md  0006-migration-schema-evolution-policy.md  0007-decided-against-credential-recovery-options.md  0008-login-decouples-unquarantine-from-activation.md  0009-rate-limit-backoff-per-account.md  0010-macos-app-repo-topology.md  0011-menubar-transport-raw-posix-af-unix.md  0012-active-reobservation-via-schedule-interleave.md  0013-session-floor-default-on-reserve-emergency-exempt.md  0014-refresh-error-backoff-is-tick-owned.md  0015-reactive-refresh-unconditional-proactive-gated.md  0016-dead-active-no-target-surfaced-not-relaxed.md  0017-bounded-blindness-preemptive-swap-not-header-observation.md  0018-shared-credential-scrub-multi-writer-lockout.md  0019-slow-poll-out-of-rotation-peers.md  0020-stats-framing-guard-permits-neutral-runway.md  0021-homebrew-tap-topology.md  0022-session-trigger-one-predicate-two-estimators.md  0023-session-trigger-ceiling-semantics.md  0024-reactive-lookahead-gap-percentile-max-window-coverage.md  0025-weekly-trigger-ceiling-semantics.md  0026-daemon-fault-severity-rank-is-cross-surface.md  0027-macos-app-bundle-identity.md  0028-version-range-provenance-canary-runtime-guard.md  README.md
docs/findings/: 0465-multi-session-rotation-interference.md  0476-keep-warm-scrub-risk-tradeoff.md  README.md
scripts/: check-cc-version.sh  check-cc-version.test.sh  check-ci-ok-needs.sh  check-formula.sh  check-formula.test.sh  check-gate-change-ack.sh  check-gate-change-ack.test.sh  check-menubar-zero-egress.sh  check-menubar-zero-egress.test.sh  check-no-security-framework.sh  spike-101-isolated-refresh-probe.sh  spike-466-invalid-grant-scrub-probe.sh
src/: active.rs  canary.rs  capture.rs  cc_version.rs  claude_state.rs  cli.rs  config.rs  contract.rs  daemon.rs  error.rs  hex.rs  isolated_spawn.rs  keychain.rs  landing.rs  login.rs  main.rs  migration.rs  observability.rs  paths.rs  percentile.rs  poke.rs  redaction.rs  refresh.rs  refresh_tick.rs  reliability.rs  service.rs  sha256.rs  stash.rs  stats.rs  swap.rs  systemic_refresh.rs  timing.rs  usage.rs  usage_stats.rs  usage_store.rs  use_account.rs
src/config/: load.rs  render.rs  settings.rs  test_support.rs  validate.rs
src/daemon/: canonical.rs  classify.rs  commands.rs  keep_warm.rs  peer_auth.rs  records.rs  refresh_fold.rs  run_loop.rs  seams.rs  selection.rs  snapshot.rs  snapshot_build.rs  socket.rs
(+18 files in other folders)
