[package]
name = "sessiometer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Manage multiple Claude Code accounts on macOS: poll per-account usage quota and swap the active credential out-of-band before exhaustion."
repository = "https://github.com/alexey-pelykh/sessiometer"
readme = "README.md"
keywords = ["claude", "macos", "keychain", "quota", "cli"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
argon2 = { version = "0.5.3", default-features = false, features = ["alloc", "zeroize"] }
chacha20poly1305 = "0.10.1"
libc = "0.2.186"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "macros", "time", "process", "io-util", "net", "signal"] }
toml = "1.1.2"
zeroize = "1.9.0"

[dev-dependencies]
tempfile = "3.27.0"
# `test-util` (feature-merged into the tokio dependency above for test/bench builds only)
# gives `#[tokio::test(start_paused = true)]` — the paused-time driver the refresh-tick
# timeout test (#105) uses to fire the whole-cycle bound without waiting real seconds.
tokio = { version = "1.52.3", features = ["test-util"] }
