[package]
name = "sessiometer"
version = "0.1.0"
edition = "2021"
# MSRV: 1.87 stabilized `u*::is_multiple_of` (used in stash/keychain/migration); 1.86 and
# older will not compile. CI gates build+test on this exact version — keep the `RUST_MSRV`
# env in `.github/workflows/ci.yml` in sync.
rust-version = "1.87.0"
license = "MIT"
description = "Manage multiple Claude Code accounts on macOS: poll per-account usage quota and swap the active credential out-of-band before exhaustion."
repository = "https://github.com/alexey-pelykh/sessiometer"
readme = "README.md"
keywords = ["claude", "macos", "keychain", "quota", "cli"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
argon2 = { version = "0.5.3", default-features = false, features = ["alloc", "zeroize"] }
chacha20poly1305 = "0.10.1"
# A zero-dependency argv lexer (issue #175): it turns the argv layer strict — unknown
# flags and malformed usage become a clear error instead of a silent no-op — WITHOUT the
# ~10-crate weight of `clap`, keeping the crate's minimal-dependency posture (0 transitive
# deps). We still own the subcommand routing, help text, and error wording on top of it.
lexopt = "0.3.2"
libc = "0.2.186"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
# `sync` (issue #165) is enabled only for `tokio::sync::watch` — the latest-snapshot
# channel that fans a full status snapshot out to each `watch` subscriber. It is an
# in-tree tokio feature (no new crate enters the graph), so the minimal-dependency line
# is preserved; the rest are the async primitives the daemon has always needed.
tokio = { version = "1.52.3", features = ["rt", "macros", "time", "process", "io-util", "net", "signal", "sync"] }
toml = "1.1.2"
# The canonical UAX #11 display-width table (issue #176), replacing a hand-rolled
# wcwidth approximation that guessed the whole emoji block as uniformly width-2 and
# ignored ZWJ sequences, regional-indicator flags, skin-tone modifiers, and variation
# selectors. Unlike the crate's other hand-rolled primitives (curl transport, SHA-256,
# hex), this one is a solved-and-versioned Unicode table: `unicode-width` has ZERO
# transitive dependencies and is strictly more correct, so the minimal-dependency
# posture is preserved (~nil dependency-count impact) while operator-provided account
# labels with wide/emoji glyphs stop misaligning the `status` / `stats` tables.
unicode-width = "0.2.2"
zeroize = "1.9.0"

[dev-dependencies]
tempfile = "3.27.0"
# `test-util` (feature-merged into the tokio dependency above for test/bench builds only)
# gives `#[tokio::test(start_paused = true)]` — the paused-time driver the refresh-tick
# timeout test (#105) uses to fire the whole-cycle bound without waiting real seconds.
tokio = { version = "1.52.3", features = ["test-util"] }
